# torontotrees

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  treeto.ca.zone
.github/workflows/: deploy.yml  monthly-blog-prompt.yml
blog/: canopy-equity-draft.md
data/processed/: nbhd_canopy.parquet  nbhd_canopy_change.parquet  nbhd_heat.parquet  nbhd_value.parquet
scripts/: add_nav.py  add_neighbourhoods_nav.py  analyze.py  bloom_calendar.py  build.py  calendar_feeds.py  canopy.py  canopy_2008.py  canopy_change.py  canopy_charts.py  charts.py  cherry.py  dotmap.py  ecosystem_charts.py  ecosystem_value.py  eda.py  export_grid.py  export_site.py  export_species.py  fetch.py  fetch_species.py  fetch_walk_routes.py  freshness.py  generate_neighbourhoods.py  heat_charts.py  heat_proxy.py  lenses.py  narrow_street_chart.py  nbhd_maps.py  next_post_topic.py  rare_trees_map.py  rss.py  sitemap.py  species_map.py  species_pages.py  timeline_data.py  two_victorians.py  veterans_map.py
site/: CNAME  index.html  robots.txt  sitemap.xml
site/about/: index.html
site/blog/: index.html  rss.xml
site/blog/beyond-the-curb/: index.html
site/blog/black-locust/: index.html
site/calendar/: index.html
site/data/: calendar.json  freshness.json  species.json  species_lineage.json  species_toronto.json
site/feeds/: all-blooms.ics  all-events.ics  cherries.ics  fall-colour.ics  fragrant.ics  index.html  showy-bloom.ics
site/lenses/: index.html
site/neighbourhoods/: index.html
site/species/: index.html
site/timeline/: index.html
site/walks/: index.html
(+243 files in other folders)
