[project]
name = "torontotrees"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.5.2",
    "geopandas>=1.1.3",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "pyarrow>=23.0.1",
    "rasterio>=1.5.0",
    "requests>=2.33.1",
    "shapely>=2.1.2",
]
